fix(docs): Update GitHub links to point to CherryRum/smkit

--- a/package.json
+++ b/package.json
@@ -59,9 +59,9 @@
     "url": "https://github.com/CherryRum/smkit.git"
   },
   "bugs": {
-    "url": "https://github.com/linyuliu/smkit/issues"
+    "url": "https://github.com/CherryRum/smkit/issues"
   },
-  "homepage": "https://github.com/linyuliu/smkit#readme",
+  "homepage": "https://github.com/CherryRum/smkit#readme",
   "engines": {
     "node": ">=18.0.0"
   },
