--- a/demo-vue/package.json
+++ b/demo-vue/package.json
@@ -16,7 +16,7 @@
   },
   "dependencies": {
     "pinia": "^3.0.3",
-    "gmkit": "file:..",
+    "gmkitx": "^0.9.1",
     "vue": "^3.5.22",
     "vue-router": "^4.5.1"
   },
