--- a/docs/package.json
+++ b/docs/package.json
@@ -9,13 +9,12 @@
     "build": "vuepress build .",
     "clean": "rm -rf .vuepress/.cache .vuepress/.temp"
   },
-  "dependencies": {},
   "devDependencies": {
-    "@vuepress/bundler-webpack": "^2.0.0-rc.24",
+    "@vuepress/bundler-vite": "^2.0.0-rc.26",
     "katex": "^0.16.25",
     "mermaid": "^11.12.1",
     "sass": "^1.94.2",
-    "sass-loader": "^16.0.6",
+    "vite-plugin-compression2": "^2.3.1",
     "vue": "^3.5.24",
     "vue-router": "^4.6.3",
     "vuepress": "^2.0.0-rc.24",
